--- a/.bluemix/toolchain.yml
+++ b/.bluemix/toolchain.yml
@@ -29,8 +29,7 @@ build:
      env:
       REPO: "repo"
       CF_APP: "{{deploy.parameters.app-name}}"
-      CF_SPACE: "{{deploy.parameters.dev-space}}"
-      CF_ORGANIZATION: "{{deploy.parameters.dev-organization}}"
+      RESOURCE_GROUP: "{{deploy.parameters.resource-group}}"
       REGION_ID: "{{deploy.parameters.dev-region}}"
       API_KEY: "{{form.pipeline.parameters.api-key}}"
      execute: true
@@ -48,7 +47,6 @@ deploy:
   service-category: pipeline
   parameters:
     app-name: trice-node-web-kube-noservices
-    dev-space: "{{space}}"
-    dev-organization: "{{organization}}"
+    resource-group: "{{resource_group_id}}"
     dev-region: "{{region}}"
     api-key: "{{apiKey}}"
